esp/esp/themes/theme_data/fruitsalad/scss/main.scss
/* ... */
/*
 * Content
 */
#page_main {
width: 600px;
margin: 0px auto;
position: relative;
background: $contentBackground;
border-radius: $rounding_radius;
}

#content {
width: 560px;
padding: 20px 20px 10px;
margin: 0px auto;
min-height: 400px;
}

#content_header {
position: relative;
border-top-right-radius: $rounding_radius; 
border-top-left-radius: $rounding_radius;
}

#content_header h1.title {
margin: 0;
padding: 6px 15px 4px;
color: $titleColor;
font-variant: small-caps;
}

#submenu {
margin: 0; padding: 0 10px;
line-height: 35px;
//height: 35px;
width: 580px;
background: #ccc;
position: relative;
}

#submenu li {
/*float: left;*/
display: inline-block;
list-style-type: none;
line-height: 35px;
}

#submenu li a {
display: inline-block;
height: 100%;
padding: 0px 2px;
text-decoration: none;
}

#submenu li + li:before {
content: '*';
}

#submenu li.navbar-manage {
  position: absolute;
  top: 0;
  right: 0;
  line-height: normal;
}
#submenu li.navbar-manage:before {
  content: '';
}
#submenu li.navbar-manage a, #submenu li.navbar-manage .navbar-manage-expander {
  display: block;
  padding: 2px 5px 5px;
}
#submenu li.navbar-manage .navbar-manage-expander {
  font-weight: bold;
  cursor: pointer;
}
#submenu li.navbar-manage a:hover, #submenu li.navbar-manage .navbar-manage-expander:hover {
}

/* ANNOUNCEMENTS */

#divannouncements {
  height: 180px;
  overflow: hidden;
}

#divannouncements ul {
  margin: 0px;
  padding: 10px 15px;
  list-style: none;
}
#divannouncements li {
  margin-top: 0px;
  padding: 10px;
}
#divannouncements h1 {
  color: $headingsColor;
  margin: 0;
  padding: 0;
  font-size: $baseFontSize;
}
#divannouncements a {
  color: $linkColor;
  font-size: $baseFontSize;
  text-decoration: none;
}

/*
 * Admin Toolbar
 */
#adminbar {
position: absolute;
top: 10px; left: 10px;
width: 200px;
background: #eee;
border: 1px #aaa solid;
z-index: 100;
}

#adminbar > .title {
padding: 2px;
text-align: center;
font-weight: bold;
cursor: pointer;
}

/*#adminbar > .title:hover {
background: #e4e4e4;
}*/

#adminbar_content .title {
padding: 2px;
background: #ccc;
border-top: 1px solid #aaa;
cursor: pointer;
}

#adminbar_content .title:hover {
background: #bbb;
}

#adminbar_content small {
    font-size: smaller;
}

#adminbar_content .content {
    padding: 8px;
}

#adminbar_content form, #adminbar_content .input-append {
    margin: 0;
}


/*
 * Page elements
 */

#content .error {
  font-size: 100%;
  text-align: center;
  color: #F00;
  font-weight: bold;
  text-decoration: underline;
}

#content .formerror {
  font-size: 80%;
  font-weight: bold;
  position: relative;
  left: 10px;
  text-decoration: underline;
  color: #F00;
}

#content p {
  line-height: 160%;
  margin-top: 0px;
}

#content li {
  line-height: 140%;
  margin-top: 0px;
}

#content h1 {
  font-size: 1.2em;
  font-weight: bold;
  color: $headingsColor;
  margin-top: 0px;
}
#content h2 {
  font-size: 1.1em;
  font-weight: bold;
  color: $headingsColor;
  margin-top: 0px;
  margin-bottom: 0px;
}
#content h3 {
  font-size: 1.0em;
  font-weight: bold;
  color: $headingsColor;
  margin-top: 0px;
  margin-bottom: 0px;
}
#content h4 {
  font-size: 0.9em;
  font-weight: bold;
  font-style: italic;
  color: $headingsColor;
  margin-top: 0px;
  margin-bottom: 0px;
}
/*  :not(.btn) keeps the content link colour/underline off buttons that are
    rendered as <a class="btn ...">, so themed button text stays legible. */
#content a:not(.btn),
#content a:not(.btn):link {
  color: $linkColor;
  text-decoration: underline;
}
#content a:not(.btn):visited {
  color: $linkColor;
  text-decoration: underline;
}
#content a:not(.btn):active,
#content a:not(.btn):hover,
#content a:not(.btn):focus {
  color: $linkColorHover;
  text-decoration: underline;
}

@if $bootswatch-active {
  // The generic $linkColor rule above (specificity 1,1,1) overrides bootswatch
  // alert link colours, making links nearly invisible against alert backgrounds
  // (e.g. Solar's cyan alert-info with blue link text).  Defer to the alert's
  // own colour — which each bootswatch sets deliberately — inside .alert blocks.
  #content .alert a:not(.btn) {
    color: inherit;
  }
}

#admin_link {
  padding: 30px 0px 0px 0px;
}

table.pdoxtable {
	border: 1px solid black;
}

table.pdoxtable td {
        border: 1px solid black;
}

table.pdoxtable th {
        border: 1px solid black;
}

table.plaintable {
	border: 0px;
}

table.plaintable td {
	border: 0px;
}
table.plaintable th {
	border: 0px;
}

.statistics { font-size: .6em; font-style: italic; text-align: center; color: #999; }

#content p.attribution {
  font-style: italic;
}

/*
 * Form elements
 */

/* remove space around forms */
#content form {
  display: inline;
  margin: 0;
  padding: 0;
}

/* columns in form tables */
.divformcol1, .divformcol2, .divformcol3, .divformcol4, .divformcol5 {
  padding: 0px 6px 10px 0px;

  line-height: 100%;
  margin: 0px;
  white-space: nowrap;
}

/* input box */
.inputbox {
  font-size: 0.9em;
  width: 92px;
  border: solid 2px #000000;
  margin: 0px;
  padding: 1px;
}
/* select box */
.selectbox {
  font-size: 12px;
  width: 92px;
}

/* prettier forms */
#content th { padding-top: 10px; }
#content th.small { font-size: .8em }
#content label.header { font-weight: bold; }
#content select, input[type=text], input[type=url], input[type=email], input[type=number], input[type=file], input[type=password], textarea { border: 1px solid #b7b7b7; }
#content select:required, input[type=text]:required, input[type=url]:required, input[type=email]:required, input[type=number]:required, input[type=password]:required, input[type=file]:required, textarea:required { border: 1px solid #FFb7b7; }
#content select:focus, input[type=text]:focus, input[type=url]:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, textarea:focus { border: 1px solid red; }
/* ... */

